--- a/leorover_vslam_viz/package.xml
+++ b/leorover_vslam_viz/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>spacer_leorover_viz</name>
-  <version>0.0.0</version>
+  <name>leorover_vslam_viz</name>
+  <version>0.0.1</version>
   <description>The spacer_leorover_viz package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="dave@todo.todo">dave</maintainer>
+  <maintainer email="dave.vandermeer@uni.lu">Dave van der Meer</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
